# Kita-PH

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  README.md  hatchet.yaml  main.py  openapi.json  pyproject.toml  requirements.txt
app/: db.py  main.py  security.py
app/dependencies/: __init__.py  services.py
app/exceptions/: __init__.py  agent.py  auth.py  base.py  file.py  memory.py  rag.py  system.py  tool.py
app/middleware/: api_key_auth.py  error_handler.py
app/models/: agent.py  auth.py  chat.py  chat_context.py  event.py  file.py  file_parse.py  graph_rag.py  llm.py  organization.py  rag.py  tool.py  user.py
app/routes/: __init__.py  agent.py  auth.py  chat.py  event.py  file.py  llm.py  memory.py  organization.py  rag.py  tool.py  user.py
app/services/: adaptive_rag_service.py  agent_service.py  agent_status_service.py  auth_service.py  chat_archive_service.py  chat_context_service.py  chat_service.py  encryption.py  event_service.py  file_service.py  graph_rag_service.py  guardrail_service.py  llm_service.py  organization_creation_service.py  organization_service.py  parse_service.py  rag_enrichment_service.py  rag_service.py  redis_service.py  tool_service.py  user_service.py  web_search_service.py
app/utils/: logger.py
app/workers/: hatchet.py  run.py  worker.py
docs/: ERRORS.md
scripts/: backfill_delegate_task.py  backfill_embeddings.py  generate_client.py  reembed_file_parsed_flattened.py  verify_agent_service.py
tests/: test_agent.py  test_auth.py  test_chat.py  test_errors.py  test_file.py  test_llm.py  test_memory.py  test_organization.py  test_tool.py  test_user.py  test_validation.py
(+40 files in other folders)
