[project]
name = "kita-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "langsmith>=0.7.22",
    "opentelemetry-exporter-otlp<1.40.0",
    "opentelemetry-sdk<1.40.0",
    "pydantic-ai>=1.0.0",
    "pymongo[srv]>=4.16.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "sentence-transformers>=5.3.0",
    "torch>=2.11.0",
    "uvicorn>=0.42.0",
]
