[project]
name = "kita-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.135.2",
    "httpx>=0.28.1",
    "logfire[fastapi]>=4.31.0",
    "pydantic-ai>=1.0.0",
    "pymongo[srv]>=4.16.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "sentence-transformers>=5.3.0",
    "supabase>=2.28.3",
    "torch>=2.11.0",
    "uvicorn>=0.42.0",
]

[tool.fastapi]
entrypoint = "main:app"
